--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,31 @@
 # Pinecone Configuration
+# Required for uploading vectors to Pinecone
 PINECONE_API_KEY="your_pinecone_api_key_here"
-PINECONE_INDEX_NAME="your_index_name"
-PINECONE_INDEX_HOST="https://your-index-name.svc.your-region.pinecone.io"
+PINECONE_INDEX_NAME="document-embeddings"
+# Direct host URL for your index (found in Pinecone console)
+PINECONE_INDEX_HOST="https://your-index-name-xxxx.svc.your-region.pinecone.io"
+
+# Customer/Organization settings
+# Used for namespacing documents in the index
+CUSTOMER_ID="default"
+# If not set, will default to "documents_${CUSTOMER_ID}"
 PINECONE_NAMESPACE="documents_${CUSTOMER_ID}"
-PINECONE_ENVIRONMENT="us-east-1"
-CUSTOMER_ID="your_customer_id"
 
-# OpenAI Configuration (Optional - needed if using OpenAI embeddings)
-OPENAI_API_KEY="your_openai_api_key_here"
-
-# Embedding Configuration
+# Embedding Model Configuration
+# Used for server-side embedding in Pinecone
+# Options include: 
+#  - "llama-text-embed-v2" (recommended)
+#  - "text-embedding-ada-002"
 EMBEDDING_MODEL="llama-text-embed-v2"
 
 # Processing Configuration
+# Size of each chunk in characters
 CHUNK_SIZE=500
+# Overlap between chunks in characters
 CHUNK_OVERLAP=75
+
+# Optional Settings
+# Logging level (DEBUG, INFO, WARNING, ERROR)
 LOG_LEVEL="INFO"
-OUTPUT_DIR="processed_content" 
+# Directory for dry-run output
+DRY_RUN_OUTPUT_DIR="dry_run_output" 
